fix: :adhesive_bandage: deleteCloumnInClientsTableAlignIndashboard

--- a/src/modules/clients/components/dashboard-porfolio-ages/dashboard-porfolio-ages.module.scss
+++ b/src/modules/clients/components/dashboard-porfolio-ages/dashboard-porfolio-ages.module.scss
@@ -39,6 +39,7 @@
             font-size: 0.625rem;
             font-weight: 300;
             line-height: 0.8;
+            align-items: baseline;
 
             .circle {
                 width: 10px;
